--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+img{
+  width: 3rem;
+  height: 3rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+hr{
+  position: absolute;
+  left: 0;
+  top: 3rem;
+  width: 3rem;
+  padding: 0;
+  margin: 0;
+  height: 0px;
+  border: 2px solid #000000;
+  transform: rotate(90deg); 
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ellips{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
   color: white;
+  margin-right: 0.6rem;
+  background: black;
+  border-radius: 50%;
+}
+.span1 {
+  width: 21rem;
+  height: 0.2rem;
+  margin-top: 0.8rem;
+  background: black;
+  position: relative;
+}
+.span1:after{
+  content: "";
+  display: inline-block;
+  width: 0.8rem;
+  height: 0.2rem;
+  background-color: black;
+  position: absolute;
+  top: -0.2rem;
+  left: 20.2rem;
+  transform: rotate(30deg);
+}
+.span1::before{
+  content: "";
+  display: inline-block;
+  width: 0.8rem;
+  height: 0.2rem;
+  background-color: black;
+  position: absolute;
+  top: 0.2rem;
+  left: 20.2rem;
+  transform: rotate(-30deg);
+}
+.animation{
+  position:absolute;
+  top: -28rem;
+  left: -10rem;
+  z-index: -5;
+  margin:1em auto;
+  width:1em;
+  font-size: 12em;
+  transform: rotate(-10deg);
 }
 
-.App-link {
-  color: #61dafb;
+.animation:before{
+  content:"";
+  position:absolute;
+  background: lightblue;
+  border-radius: 5em;
+  width:4em;
+  height:5.5em;
+  transform:rotate(-45deg) skewX(22.5deg) skewY(22.5deg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.animation:after{
+  content:"";
+  position:absolute;
+  background: lightblue;
+  border-radius: 5em;
+  width: 4em;
+  height:5.5em;
+  transform:rotate(45deg) skewX(22.5deg) skewY(22.5deg);
 }
+/* 
+.animation {
+  margin: 50px 0;
+  position: relative;
+  display: block;
+  color: blueviolet;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid blueviolet;
+  border-left: 100px solid transparent;
+  border-radius: 150px;
+  transform: rotate(35deg);
+}
+.animation:before {
+  border-bottom: 80px solid blueviolet;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-radius: 150px;
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -45px;
+  left: -65px;
+  display: block;
+  content: '';
+  transform: rotate(-35deg);
+}
+.animation:after {
+  position: absolute;
+  display: block;
+  color: blueviolet;
+  top: 3px;
+  left: -105px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid blueviolet;
+  border-left: 100px solid transparent;
+  border-radius: 150px;
+  transform: rotate(-70deg);
+  content: '';
+} */
